// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Builder Expect everything to be harmonious 1`] = `
"
Account account0 = new Account();
account0.OrgMigrationId__c = '001';
account0.Name = 'xgov';
account0.BillingStreet = 'North Star Avenue';
account0.BillingCity = 'Swindon';
account0.BillingState = 'Wiltshire';
account0.BillingPostalCode = 'SN2 1SZ';
account0.BillingCountry = 'United Kingdom';
insert account0;
      
Acc_ProjectContactLink__c pcl0 = new Acc_ProjectContactLink__c();
pcl0.Acc_Role__c = 'Monitoring officer';
pcl0.Acc_EmailOfSFContact__c = 'noemail@noemail.com';
pcl0.Acc_ProjectId__c = project0.Id;
pcl0.Acc_AccountId__c = account0.Id;
pcl0.Acc_ContactId__c = contact0.Id;
// pcl0.Acc_UserId__c relationship is not defined
insert pcl0;
      
Acc_ProjectParticipant__c projectParticipant0 = new Acc_ProjectParticipant__c();
projectParticipant0.ParticipantMigrationID__c = '004001';
projectParticipant0.Acc_ParticipantType__c = 'Business';
projectParticipant0.Acc_ParticipantSize__c = 'Medium';
projectParticipant0.Acc_ProjectRole__c = 'Lead';
projectParticipant0.Acc_AuditReportFrequency__c = 'With all claims';
projectParticipant0.Acc_ParticipantStatus__c = 'Active';
projectParticipant0.Acc_Award_Rate__c = 50;
projectParticipant0.Acc_Cap_Limit__c = 50;
projectParticipant0.Acc_FlaggedParticipant__c = false;
projectParticipant0.Acc_OverheadRate__c = 20;
projectParticipant0.Acc_ParticipantProjectReportingType__c = 'Public';
projectParticipant0.Acc_OrganisationType__c = 'Industrial';
projectParticipant0.Acc_CreateProfiles__c = false;
projectParticipant0.Acc_CreateClaims__c = false;
projectParticipant0.Acc_Project__c = project0.Id;
projectParticipant0.Acc_AccountId__c = account0.Id;
insert projectParticipant0;
      
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = '100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Contact contact0 = new Contact();
contact0.ContactMigrationId__c = '001';
contact0.FirstName = 'Austria';
contact0.LastName = 'Hedges';
contact0.Email = 'austria@x.gov.uk';
contact0.AccountId = account0.Id;
insert contact0;
      
User user0 = new User();
user0.Username = 'austria@x.gov.uk';
user0.Email = 'austria@x.gov.uk';
user0.FirstName = 'Austria';
user0.LastName = 'Hedges';
user0.Alias = 'xgovuk';
user0.CommunityNickname = 'austria';
user0.EmailEncodingKey = 'UTF-8';
user0.LocaleSidKey = 'en_GB';
user0.LanguageLocaleKey = 'en_US';
user0.TimeZoneSidKey = 'Europe/London';
user0.ProfileId = '00e58000001ITpLAAW';
user0.ContactId = contact0.Id;
insert user0;
      
Acc_Project__c project0 = new Acc_Project__c();
project0.Acc_CompetitionId__c = competition0.Id;
project0.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project0.Acc_Duration__c = 36;
project0.Acc_ClaimFrequency__c = 'Quarterly';
project0.Acc_ProjectTitle__c = 'Title';
project0.Acc_TSBProjectNumber__c = '100';
project0.Acc_WorkdayProjectSetupComplete__c = true;
insert project0;
        
project0.Acc_NonFEC__c = false;
project0.Acc_MonitoringLevel__c = 'Platinum';
project0.Acc_MonitoringReportSchedule__c = 'Monthly';
project0.Acc_ProjectStatus__c = 'Live';
upsert project0;
        "
`;

exports[`Project Builder Expect everything to be harmonious with a prefix 1`] = `
"
Account account0 = new Account();
account0.OrgMigrationId__c = 'hello.001';
account0.Name = 'xgov';
account0.BillingStreet = 'North Star Avenue';
account0.BillingCity = 'Swindon';
account0.BillingState = 'Wiltshire';
account0.BillingPostalCode = 'SN2 1SZ';
account0.BillingCountry = 'United Kingdom';
insert account0;
      
Acc_ProjectContactLink__c pcl0 = new Acc_ProjectContactLink__c();
pcl0.Acc_Role__c = 'Monitoring officer';
pcl0.Acc_EmailOfSFContact__c = 'hello.noemail@noemail.com';
pcl0.Acc_ProjectId__c = project0.Id;
pcl0.Acc_AccountId__c = account0.Id;
pcl0.Acc_ContactId__c = contact0.Id;
// pcl0.Acc_UserId__c relationship is not defined
insert pcl0;
      
Acc_ProjectParticipant__c projectParticipant0 = new Acc_ProjectParticipant__c();
projectParticipant0.ParticipantMigrationID__c = 'hello.004001';
projectParticipant0.Acc_ParticipantType__c = 'Business';
projectParticipant0.Acc_ParticipantSize__c = 'Medium';
projectParticipant0.Acc_ProjectRole__c = 'Lead';
projectParticipant0.Acc_AuditReportFrequency__c = 'With all claims';
projectParticipant0.Acc_ParticipantStatus__c = 'Active';
projectParticipant0.Acc_Award_Rate__c = 50;
projectParticipant0.Acc_Cap_Limit__c = 50;
projectParticipant0.Acc_FlaggedParticipant__c = false;
projectParticipant0.Acc_OverheadRate__c = 20;
projectParticipant0.Acc_ParticipantProjectReportingType__c = 'Public';
projectParticipant0.Acc_OrganisationType__c = 'Industrial';
projectParticipant0.Acc_CreateProfiles__c = false;
projectParticipant0.Acc_CreateClaims__c = false;
projectParticipant0.Acc_Project__c = project0.Id;
projectParticipant0.Acc_AccountId__c = account0.Id;
insert projectParticipant0;
      
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = 'hello.100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Contact contact0 = new Contact();
contact0.ContactMigrationId__c = 'hello.001';
contact0.FirstName = 'Austria';
contact0.LastName = 'Hedges';
contact0.Email = 'hello.austria@x.gov.uk';
contact0.AccountId = account0.Id;
insert contact0;
      
User user0 = new User();
user0.Username = 'hello.austria@x.gov.uk';
user0.Email = 'hello.austria@x.gov.uk';
user0.FirstName = 'Austria';
user0.LastName = 'Hedges';
user0.Alias = 'xgovuk';
user0.CommunityNickname = 'hello.austria';
user0.EmailEncodingKey = 'UTF-8';
user0.LocaleSidKey = 'en_GB';
user0.LanguageLocaleKey = 'en_US';
user0.TimeZoneSidKey = 'Europe/London';
user0.ProfileId = '00e58000001ITpLAAW';
user0.ContactId = contact0.Id;
insert user0;
      
Acc_Project__c project0 = new Acc_Project__c();
project0.Acc_CompetitionId__c = competition0.Id;
project0.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project0.Acc_Duration__c = 36;
project0.Acc_ClaimFrequency__c = 'Quarterly';
project0.Acc_ProjectTitle__c = 'Title';
project0.Acc_TSBProjectNumber__c = 'hello.100';
project0.Acc_WorkdayProjectSetupComplete__c = true;
insert project0;
        
project0.Acc_NonFEC__c = false;
project0.Acc_MonitoringLevel__c = 'Platinum';
project0.Acc_MonitoringReportSchedule__c = 'Monthly';
project0.Acc_ProjectStatus__c = 'Live';
upsert project0;
        "
`;

exports[`Project Builder Expect project to be built, linking correctly to competition 1`] = `
"
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = '100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Acc_Project__c project0 = new Acc_Project__c();
project0.Acc_CompetitionId__c = competition0.Id;
project0.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project0.Acc_Duration__c = 36;
project0.Acc_ClaimFrequency__c = 'Quarterly';
project0.Acc_ProjectTitle__c = 'Title';
project0.Acc_TSBProjectNumber__c = '100';
project0.Acc_WorkdayProjectSetupComplete__c = true;
insert project0;
        
project0.Acc_NonFEC__c = false;
project0.Acc_MonitoringLevel__c = 'Platinum';
project0.Acc_MonitoringReportSchedule__c = 'Monthly';
project0.Acc_ProjectStatus__c = 'Live';
upsert project0;
        "
`;
